--- a/templates/about.html
+++ b/templates/about.html
@@ -13,37 +13,46 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>    <title>About Us</title>
+<link href="https://fonts.googleapis.com/css?family=Nunito:900&display=swap" rel="stylesheet">
+    <script>$(function () {
+  $('[data-toggle="popover"]').popover()
+})</script>
+    <style>
+.navbar-brand{
+font-family: 'Nunito', sans-serif;
+}
+        .jumbotron {
+border: 3px;
+border-color: #000000;
+border-style:solid;
+}
+    </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;" >
+<nav class="navbar navbar-expand-lg navbar-light nav-pills nav-fill" style="background-color: #e3f2fd;" >
        <a class="navbar-brand" href="#">Corona Updates</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav nav-pills">
-      <li class="nav-item active"><a class="nav-link" href="{{url_for('index')}}">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="{{url_for('index')}}">Home</a></li>
       <li class="nav-item"> <a class="nav-link" href="{{url_for('country')}}">Country</a></li>
       <li class="nav-item"><a class="nav-link"href="{{url_for('city')}}">City</a></li>
       <li class="nav-item"><a class="nav-link" href="{{url_for('email_alerts')}}">Email Alerts</a></li>
         <li class="nav-item"> <a class="nav-link" href="{{url_for('info')}}">Info</a></li>
-        <li class="nav-item"> <a class="nav-link" href="{{url_for('about')}}">About</a></li>
+        <li class="nav-item"> <a class="nav-link active" href="{{url_for('about')}}">About</a></li>
     </ul>
   </div>
 </nav>
-    <div class="row">
-    <div class="col">
-        <div class="jumbotron jumbotron-fluid " style="margin-top:20px; margin-left:20px; margin-right:20px;">
-            <p class="lead">
-                When we heard the corona virus got to our country we thought about how we could help our society to cop better with the new virus.
-                We thought that making an informative website that can show you a list of places in your city in which a person who has been diagnosed with corona has been and on top of that showing important data about the virus could really have an impact on our society.
-                <br>
-                <br>
-                <strong>Version 1.5.8 beta</strong>
-            </p>
-        </div>
-    </div>
+    <div class="container">
+
+        <div style="background:#e3f2fd !important; margin-top: 40px;" class="jumbotron">
+    <h1>About Us!</h1>
+    <p>This website was created to help and inform about COVID-19</p>
+   <button style="background-color:#007bff" type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Learn More" data-content="This Site was produced by M&E">Learn More</button>
+</div>
     </div>
 
 </body>
