--- a/templates/country.html
+++ b/templates/country.html
@@ -15,12 +15,14 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
     <title>My form</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:900&display=swap" rel="stylesheet">
     <style>
         .jumbotron{
         min-height:100%;
         }
-
+.navbar-brand{
+font-family: 'Nunito', sans-serif;
+}
 
     </style>
 </head>
@@ -34,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav nav-pills">
             <li class="nav-item active"><a class="nav-link" href="{{url_for('index')}}">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{url_for('country')}}">Country</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{{url_for('country')}}">Country</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('city')}}">City</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('email_alerts')}}">Email Alerts</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('info')}}">Info</a></li>
@@ -47,7 +49,7 @@
     <div class="row">
         <div class="col-lg-7 clo-xs-8">
             <div class="jumbotron jumbotron-fluid mr-lg-0 mr-md-0 mr-xl-0 ml-lg-0 ml-md-0 ml-xl-0   mb-lg-0 mb-md-0 mb-xl-0"
-                 style="margin-top:20px; margin-left:20px; margin-right:20px; margin-bottom:200px;">
+                 style="margin-top:20px; margin-left:20px; margin-right:20px; margin-bottom:200px;background:#e3f2fd !important;">
                 <div style="margin-top:20px; margin-left:20px; margin-right:20px;">
 
                     <h1> Info about {{ arr[0] }}:</h1>
@@ -62,14 +64,14 @@
                     <form method="POST">
                         <h2 class=""> Want to learn about another country? Enter it here: </h2> <br>
                         <input name="u">
-                        <input type="submit">
+                        <input class="btn btn-primary" type="submit">
                     </form>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="jumbotron jumbotron-fluid ml-lg-0 ml-md-0 ml-xl-0 mr-lg-0 mr-md-0 mr-xl-0 mb-lg-0 mb-md-0 mb-xl-0 "
-                 style="margin-top:20px; margin-right:20px; margin-left:20px;">
+                 style="margin-top:20px; margin-right:20px; margin-left:20px;background:#e3f2fd !important;">
                 <div style="margin-top:20px; margin-left:20px; margin-right:20px;">
 
                     <p class="display-4">Most Infected Countries:</p>
@@ -77,21 +79,21 @@
                     <p class="lead">Infected: {{top_c[1]}}:</p>
                     <p class="lead">Dead: {{top_c[3]}}:</p>
                     <form action="" method="POST">
-                        <button type="submit" name="load_more_data" value="1">See more</button>
+                        <button class="btn btn-primary" type="submit" name="load_more_data" value="1">See more</button>
                     </form>
                     <br>
-                    <h2>{{top_c[10]}}:</h2>
-                    <p class="lead">Infected: {{top_c[11]}}:</p>
-                    <p class="lead">Dead: {{top_c[13]}}:</p>
+                    <h2>{{top_c[11]}}:</h2>
+                    <p class="lead">Infected: {{top_c[12]}}:</p>
+                    <p class="lead">Dead: {{top_c[14]}}:</p>
                     <form action="" method="POST">
-                        <button type="submit" name="load_more_data" value="2">See more</button>
+                        <button class="btn btn-primary" type="submit" name="load_more_data" value="2">See more</button>
                     </form>
                     <br>
-                    <h2>{{top_c[20]}}:</h2>
-                    <p class="lead">Infected: {{top_c[21]}}:</p>
-                    <p class="lead">Dead: {{top_c[23]}}:</p>
+                    <h2>{{top_c[22]}}:</h2>
+                    <p class="lead">Infected: {{top_c[23]}}:</p>
+                    <p class="lead">Dead: {{top_c[25]}}:</p>
                     <form action="" method="POST">
-                        <button type="submit" name="load_more_data" value="3">See more</button>
+                        <button class="btn btn-primary" type="submit" name="load_more_data" value="3">See more</button>
                     </form>
 
                 </div>
