--- a/templates/emailalerts.html
+++ b/templates/emailalerts.html
@@ -14,7 +14,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:900&display=swap" rel="stylesheet">
     <title>Email Alerts</title>
+    <style>
+        .navbar-brand{
+font-family: 'Nunito', sans-serif;
+}
+
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -28,7 +35,7 @@
             <li class="nav-item active"><a class="nav-link" href="{{url_for('index')}}">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('country')}}">Country</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('city')}}">City</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{url_for('email_alerts')}}">Email Alerts</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{{url_for('email_alerts')}}">Email Alerts</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('info')}}">Info</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('about')}}">About</a></li>
         </ul>
@@ -36,7 +43,8 @@
 </nav>
 <div class="row">
     <div class="col">
-        <div class="jumbotron jumbotron-fluid " style="margin-top:20px; margin-left:20px; margin-right:20px;">
+        <div class="jumbotron jumbotron-fluid "
+             style="margin-top:20px; margin-left:20px; margin-right:20px;background:#e3f2fd !important;">
             <div style="margin-top:20px; margin-left:20px; margin-right:20px;">
                 <h1 class="display-4">Email Alerts</h1>
                 <h3 class="lead">if you would like to get daily updates about new places in your city enter your mail
@@ -55,8 +63,19 @@
                 <form action="{{url_for('email_alerts')}}" method='POST'>
 
                     <p class="lead">Mail Address: <input type='text' size='30' name='address'></p>
-                    <p class="lead">City: <input type='text' size='10' name='city_name'></p>
-                    <input type='submit' value='submit'>
+                    <label>
+                        City
+                        <input list="cities" name="city_name"/>
+                    </label>
+
+                    <datalist id="cities">
+                        {% for city in city_list %}
+                        <p>{{city}}</p>
+                        <option value='{{city}}'>
+                            {% endfor %}
+                    </datalist>
+                    <br><br>
+                    <input class="btn btn-primary" type='submit' value='Submit'>
 
                 </form>
             </div>
